<resources>
    <string name="com_auth0_client_id">gt5kv2v705Pzlfv1KQR0rb2ELHetvPE3</string>
    <string name="com_auth0_domain">gamehub.eu.auth0.com</string>

    <string name="app_name">GameHub</string>
    <string name="img_game_type_desc">The type of game</string>
    <string name="logo_description">GameHub Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_account">Sign in</string>
    <string name="hint_user_password">Password</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_user_email">Email</string>
    <string name="hint_user_phone">Telephone</string>
    <string name="logout">Logout</string>
    <string name="remove_account">Delete account</string>
    <string name="create_game">Add new game</string>
    <string name="join_party">Join</string>
    <string name="max_distance">Max distance</string>
    <string name="add_new_game">Add a new Game</string>
    <string name="game_name">Name of the Game</string>
    <string name="game_description">Game Description</string>
    <string name="game_rules">Game Rules</string>
    <string name="game_requirements">Game Requirements</string>
    <string name="game_type">Game Type</string>
    <string name="create_game_party">Create a Game Party</string>
    <string name="party_name">Party Name</string>
    <string name="select_game">Select a Game</string>
    <string name="party_when">When</string>
    <string name="party_where">Where</string>
    <string name="gamehub_logo">GameHub Logo</string>
    <string name="new_game">Add a new Game</string>
    <string name="account_settings">Account Settings</string>
    <string name="to_map">Go to the Map</string>
    <string name="decline">Decline</string>
    <string name="distance_min">2</string>
    <string name="distance_max">100</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_signup">Sign Up/Log in</string>
    <string name="searchIcon">A Search Icon</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="_100">100</string>
    <string name="_2">2</string>
    <string name="party_overview">Party Overview</string>
    <string name="app_slogan">Meet. Greet. Play.</string>
    <string name="max_size_hint">Max amount of people</string>
    <string name="max_party_size">Max Party Size</string>
    <string name="party_where_txt">Your current location will be used</string>
    <string name="save_changes">Save Changes</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="date_format">Conform to the format of yyyy-mm-dd</string>
    <string name="fields_empty_error">Please fill in all fields</string>
</resources>
