<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="digitized.gamehub.accountSettings.AccountSettingsViewModel" />
    </data>


    <ScrollView
        android:id="@+id/account_settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/txt_label"
                android:text="@string/firstName" />

            <EditText
                android:id="@+id/txt_firstName"
                style="@style/txt_field"
                android:layout_gravity="center_horizontal"
                android:autofillHints="@string/firstName"
                android:inputType="text" />

            <TextView
                style="@style/txt_label"
                android:text="@string/lastName" />

            <EditText
                android:id="@+id/txt_lastName"
                style="@style/txt_field"
                android:layout_gravity="center_horizontal"
                android:autofillHints="@string/lastName"
                android:inputType="text" />

            <TextView
                style="@style/txt_label"
                android:text="@string/hint_user_email" />

            <EditText
                android:id="@+id/txt_user_email"
                style="@style/txt_field"
                android:layout_gravity="center_horizontal"
                android:autofillHints="@string/hint_user_email"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/txt_label"
                android:text="@string/max_distance" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textAlignment="viewEnd" />

                <SeekBar
                    android:id="@+id/maxDistance"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="100"
                    android:min="2" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_100" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save_updates"
                style="@style/btn_large_primary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_large"
                android:background="@drawable/custom_button_green"
                android:text="@string/save_changes" />

            <Button
                android:id="@+id/btn_logout"
                style="@style/btn_large_primary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_general"
                android:background="@drawable/custom_button_green"
                android:text="@string/logout" />

        </LinearLayout>
    </ScrollView>
</layout>