<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[12]" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_general">

            <EditText
                android:id="@+id/txt_user_name"
                style="@style/txt_field"
                android:layout_marginTop="24dp"
                android:autofillHints="@string/hint_user_name"
                android:ems="10"
                android:hint="@string/hint_user_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_user_email"
                style="@style/txt_field"
                android:layout_marginTop="24dp"
                android:autofillHints="@string/hint_user_email"
                android:ems="10"
                android:hint="@string/hint_user_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_user_name" />

            <EditText
                android:id="@+id/editText"
                style="@style/txt_field"
                android:layout_marginTop="24dp"
                android:autofillHints="@string/hint_user_phone"
                android:ems="10"
                android:hint="@string/hint_user_phone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_user_email" />

            <EditText
                android:id="@+id/txt_user_password"
                style="@style/txt_field"
                android:layout_marginTop="24dp"
                android:autofillHints="@string/hint_user_password"
                android:ems="10"
                android:hint="@string/hint_user_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/btn_register"
                style="@style/btn_large_primary"
                android:layout_marginTop="32dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_user_password" />

            <Button
                android:id="@+id/btn_to_login"
                style="@style/btn_large_primary"
                android:layout_marginTop="24dp"
                android:text="@string/already_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>